# bootstrap

./: .travis.yml  CMakeLists.txt  bootstrap
cmake/lua2c/: CMakeLists.txt
cmake/md5/: CMakeLists.txt
cmake/rocksolver/: CMakeLists.txt
